--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
+
   "scripts": {
     "start": "react-scripts start",
+    "server": "json-server --watch db.json -p 3000",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
